<resources>
    <string name="app_name">AndroidProject</string>
    <string name="clear_list">Clear List</string>
    <string name="refresh_list">Refresh List</string>
    <string name="fetch_data">Fetch Data</string>
    <string name="title">title</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="body">body</string>
    <string name="reza_zeiny">Reza Zeiny</string>
    <string name="mahdi_hassanzadeh">Mahdi Hassanzadeh</string>
    <string name="amir_hossein_mahdipour">Amir Hossein Mahdipour</string>
    <string name="seyed_alireza_fatemi_jahromi">Seyed Alireza Fatemi Jahromi</string>
    <string name="switch_menu">Switch</string>
    <string name="image">Image</string>
    <string name="see_more">See More</string>
</resources>
